--- a/index.css
+++ b/index.css
@@ -1,12 +1,40 @@
 
 /*Initial formatting*/
-body {
-  margin: 0 auto;
-  max-width: 50em;
-}
-
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
 
 body {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+main {
+    padding: 4em 1em;
+    margin: 0 auto;
+    max-width: 50em;
+}
+
+header {
+    background-color: #263d36;
+    background-image: url("header.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    line-height: 1.2;
+    max-width: none;
+    padding: 10vw 2em;
+    text-align: center;
+}
+
+header h1 {
+    color: black;
+    font-size: 2.5em;
+    font-weight: 300;
+}
+
+header p {
+    color: black;
+}
+
+body {
+    margin: 0;
+    padding: 0;
 }
